fix: z-index issues related to the filter bar

--- a/sites/public/src/components/listings/search/ListingsSearch.module.scss
+++ b/sites/public/src/components/listings/search/ListingsSearch.module.scss
@@ -13,13 +13,12 @@
 
 .search-filter-bar {
   width: calc(var(--listings-list-width) - var(--seeds-s6));
-  
   display: flex;
   justify-content: space-between;
   align-items: center;
   position: absolute;
   right: 0px;
-  z-index: 1;
+  z-index: calc(var(--seeds-z-index-overlay) - 1);
   background: white;
   padding-inline-end: var(--seeds-s4);
   padding-block: var(--seeds-s2);
